# exhibition-tracker

./: .env.example  .gitignore  README-frontend.md  app.js  exhibitions.ics  index.html  pyproject.toml  requirements.txt  run_all_in_one.bat  run_ics_only.bat  run_taiwan.bat  run_update.bat  run_world.bat  run_world_lean.bat  styles.css
.github/workflows/: update.yml
config/: industries.yaml  industries_lean.yaml  taiwan_companies.yaml
functions/api/: add-taiwan.js  exhibitions.js
scripts/: add_company_extra_industries.py  add_taiwan_company.py  cleanup_taiwan_only.py  dedupe.py  generate_ics.py  migrate_industry_label.py  refix_long_duration.py  update_all.py  update_layer1.py  update_layer2_whitelist.py
src/: __init__.py  category_filter.py  claude_query.py  claude_validator.py  deduper.py  gemini_query.py  gemini_validator.py  ics_generator.py  logger.py  models.py  notion_writer.py  perplexity_query.py  settings.py
src/scrapers/: __init__.py  earnings.py  macro_calendar.py  nangang.py  taiwan_conferences.py  taiwan_monthly.py  twtc.py
